refactor: 1re passe