@@ -54,7 +54,7 @@ public class Exp extends PostfixMathCommand
 		}
 		else if (param instanceof Number) 
 		{
-			return new Double(Math.exp(((Number)param).doubleValue()));
+			return Double.valueOf(Math.exp(((Number)param).doubleValue()));
 		}
 
 		throw new ParseException("Invalid parameter type");
