@@ -45,7 +45,7 @@ public class Logarithm extends PostfixMathCommand
 		{
 			double num = ((Number) param).doubleValue();
 			if( num >= 0)
-				return new Double(Math.log(num)/LOG10);
+				return Double.valueOf(Math.log(num)/LOG10);
 			else
 			{	
 				Complex temp = new Complex(num);
