@@ -47,7 +47,7 @@ public class NaturalLogarithm extends PostfixMathCommand
 			// Now returns Complex if param is <0
 			double num = ((Number) param).doubleValue();
 			if( num >= 0)
-				return new Double(Math.log(num));
+				return Double.valueOf(Math.log(num));
 			else
 			{	
 				Complex temp = new Complex(num);
